# and-real-estate

./: .gitignore  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: f9f776c55859_initial_migration.py
backend/: asgi.py  main.py
backend/app/api/: auth.py  inquiries.py  properties.py
backend/app/core/: config.py  security.py
backend/app/database/: session.py
backend/app/models/: admin.py  inquiry.py  property.py
backend/app/schemas/: property.py
backend/app/services/: cloudinary.py  inquiry.py  property.py
docs/: client_requirements.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AdminLayout.jsx  Footer.jsx  Hero.jsx  ImageUpload.jsx  Navbar.jsx  PropertyCard.jsx  PropertyFilter.jsx  PropertyForm.jsx
frontend/src/hooks/: useProperties.js
frontend/src/pages/: AdminDashboard.jsx  AdminLogin.jsx  AdminPropertyDetail.jsx  AdminPropertyList.jsx  Contact.jsx  Home.jsx  Properties.jsx  PropertyDetails.jsx  Services.jsx
frontend/src/router/: AppRouter.jsx
frontend/src/services/: api.js
