[project]
name = "and-real-estate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
